--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,3 +23,33 @@
     ],
     "version": "2.0.0"
 }
+// {
+//     "version": "2.0.0",
+//     "tasks": [
+//       {
+//         "type": "process",
+//         "label": "C/C++: Build .exe",
+//         "command": "E:\\Programs\\msys2\\mingw64\\bin\\g++.exe",
+//         "args": ["-g",
+//                  "${file}",
+//                  "-o", 
+//                  "${fileDirname}\\${fileBasenameNoExtension}.exe",
+//                  "-lbgi",
+//                  "-lgdi32",
+//                  "-lcomdlg32",
+//                  "-luuid",
+//                  "-loleaut32",
+//                  "-lole32"
+//                 ],
+//         "options": {
+//           "cwd": "${fileDirname}"
+//         },
+//         "problemMatcher": [],
+//         "group": {
+//           "kind": "build",
+//           "isDefault": true
+//         },
+//         "detail": "compiler: E:\\Programs\\msys2\\mingw64\\bin\\g++.exe"
+//       }
+//     ]
+//   }
